# robotic-warehouse

./: .gitignore  human_play.py  pyproject.toml  setup.py
rware/: __init__.py  entity.py  layout.py  observation.py  pettingzoo.py  rendering.py  reward.py  warehouse.py
rware/utils/: __init__.py  typing.py  utils.py  wrappers.py
tests/: test_env.py  test_goals.py  test_integration.py  test_movement.py  test_rendering.py  test_wrappers.py
