[project]
name = "rware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pyglet>=2.1",
]

[project.optional-dependencies]
pettingzoo = ["pettingzoo>=1.24.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "expecttest>=0.3.0",
]
